@@ -1,3 +1,13 @@
+Sun Nov 18 14:51:35 CET 2012  John Tytgat  <John.Tytgat@aaug.net>
+
+	* include/string/byteswap.h: Upgrade to glibc 2.16.0 copy. Fixes
+	_BYTESWAP_H vs __BYTESWAP_H confusion.
+
+Thu Aug 16 01:29:21 CEST 2012  Theo Markettos  <theo@markettos.org.uk>
+
+	* include/sys/socket.h: Avoid include bits/socket2.h when in
+	FORTIFY mode.
+
 Fri Jul 13 16:16:27 CEST 2012  John Tytgat  <John.Tytgat@aaug.net>
 
 	* common/prefix.c (__get_dde_prefix): Avoid reading from NULL when
@@ -1790,7 +1800,7 @@ Tue Dec 23 02:25:46 CET 2008  John Tytgat  <John.Tytgat@aaug.net>
 	system variables.  Based on a test program written and posted
 	in ML by Peter Naulls.
 
-Sat Dec 20 14:34:20 CET 2008  Theo Markettos <theo@markettos.org.uk>
+Sat Dec 20 14:34:20 CET 2008  Theo Markettos  <theo@markettos.org.uk>
 
 	* grp/getgrouplist.c(getgrouplist): Added.
 	* test/grp/getgrouplist.c,test/grp/test.group: Added test application
